format some core files along codestyle guidelines
Signed-off-by: l-1sqared <30831153+l-1squared@users.noreply.github.com>